--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ WARDEN_ENV_NAME=qunity
 WARDEN_ENV_TYPE=magento2
 
 WARDEN_WEB_ROOT=/magento
-WARDEN_PWA_ROOT=/pwa
+WARDEN_PWA_ROOT=/magento-pwa
 
 TRAEFIK_DOMAIN=qunity.test
 TRAEFIK_SUBDOMAIN=app
