--- a/.warden/warden-env.yml
+++ b/.warden/warden-env.yml
@@ -2,7 +2,7 @@ services:
   php-debug:
     environment:
       - NODE_ENV=development
-      - UPWARD_JS_UPWARD_PATH=/var/www/html/${WARDEN_PWA_ROOT}/upward.yml
+      - UPWARD_JS_UPWARD_PATH=/var/www/html/pwa/upward.yml
       - MAGENTO_BACKEND_URL=https://${TRAEFIK_SUBDOMAIN}.${TRAEFIK_DOMAIN}/
       - DEV_SERVER_HOST=0.0.0.0
       - DEV_SERVER_PORT=${PWA_DEV_SERVER_PORT}
@@ -31,7 +31,7 @@ services:
   php-fpm:
     environment:
       - NODE_ENV=production
-      - UPWARD_JS_UPWARD_PATH=/var/www/html/${WARDEN_PWA_ROOT}/upward.yml
+      - UPWARD_JS_UPWARD_PATH=/var/www/html/pwa/upward.yml
       - MAGENTO_BACKEND_URL=https://${TRAEFIK_SUBDOMAIN}.${TRAEFIK_DOMAIN}/
       - STAGING_SERVER_HOST=0.0.0.0
       - STAGING_SERVER_PORT=${PWA_STAGING_SERVER_PORT}
