Add 'install' command and add qunity.sh to Warden containers

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@
 /.qunity/replace/*
 !/.qunity/replace/.gitkeep
 
+/.qunity/replace/magento/*
+!/.qunity/replace/magento/.qunity
+
 /magento/*
 /magento-pwa/*
