--- a/.warden/warden-env.yml
+++ b/.warden/warden-env.yml
@@ -12,6 +12,11 @@ services:
       - ${TRAEFIK_LISTEN:-127.0.0.1}:${PWA_DEV_SERVER_PORT}:${PWA_DEV_SERVER_PORT}
     volumes:
       - type: bind
+        source: ./${WARDEN_PKG_ROOT}
+        target: /var/www/html/packages
+        bind:
+          create_host_path: true
+      - type: bind
         source: ./${WARDEN_PWA_ROOT}
         target: /var/www/html/pwa
         bind:
@@ -25,6 +30,12 @@ services:
       - type: bind
         source: ${HOME}/.warden/ssl/certs/${TRAEFIK_DOMAIN}.crt.pem
         target: /etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.crt.pem
+        read_only: true
+        bind:
+          create_host_path: true
+      - type: bind
+        source: ./.qunity
+        target: /var/www/html/.qunity
         read_only: true
         bind:
           create_host_path: true
@@ -47,6 +58,11 @@ services:
       - ${TRAEFIK_LISTEN:-127.0.0.1}:${PWA_STAGING_SERVER_PORT}:${PWA_STAGING_SERVER_PORT}
     volumes:
       - type: bind
+        source: ./${WARDEN_PKG_ROOT}
+        target: /var/www/html/packages
+        bind:
+          create_host_path: true
+      - type: bind
         source: ./${WARDEN_PWA_ROOT}
         target: /var/www/html/pwa
         bind:
@@ -60,6 +76,12 @@ services:
       - type: bind
         source: ${HOME}/.warden/ssl/certs/${TRAEFIK_DOMAIN}.crt.pem
         target: /etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.crt.pem
+        read_only: true
+        bind:
+          create_host_path: true
+      - type: bind
+        source: ./.qunity
+        target: /var/www/html/.qunity
         read_only: true
         bind:
           create_host_path: true
