Create 'magento:admin:create' command of qunity.sh script

--- a/.qunity/.env
+++ b/.qunity/.env
@@ -2,12 +2,12 @@ MAGENTO_REPOSITORY=git@github.com:qunity/magento.git
 MAGENTO_REPLACE_DIR=./magento
 MAGENTO_DESTINATION_DIR=./magento
 
-PKG_QUNITY_BASE_NAME=qunity:base
+PKG_QUNITY_BASE_IDENTITY=qunity:base
 PKG_QUNITY_BASE_REPOSITORY=git@github.com:qunity/module-base.git
 PKG_QUNITY_BASE_REPLACE_DIR=./packages/qunity/module-base
 PKG_QUNITY_BASE_DESTINATION_DIR=./packages/qunity/module-base
 
-PKG_QUNITY_UPWARD_CONNECTOR_NAME=qunity:upward-connector
+PKG_QUNITY_UPWARD_CONNECTOR_IDENTITY=qunity:upward-connector
 PKG_QUNITY_UPWARD_CONNECTOR_REPOSITORY=git@github.com:qunity/module-upward-connector.git
 PKG_QUNITY_UPWARD_CONNECTOR_REPLACE_DIR=./packages/qunity/module-upward-connector
 PKG_QUNITY_UPWARD_CONNECTOR_DESTINATION_DIR=./packages/qunity/module-upward-connector
@@ -15,3 +15,17 @@ PKG_QUNITY_UPWARD_CONNECTOR_DESTINATION_DIR=./packages/qunity/module-upward-conn
 PWA_REPOSITORY=git@github.com:qunity/magento-pwa.git
 PWA_REPLACE_DIR=./pwa
 PWA_DESTINATION_DIR=./pwa
+
+MAGENTO_ADMIN_KACHKIN_RODION_IDENTITY=kachkin:rodion
+MAGENTO_ADMIN_KACHKIN_RODION_USER=kyleRQWS
+MAGENTO_ADMIN_KACHKIN_RODION_EMAIL=kyleRQWS@gmail.com
+MAGENTO_ADMIN_KACHKIN_RODION_PASSWORD=Umai2jim2331
+MAGENTO_ADMIN_KACHKIN_RODION_FIRSTNAME=Rodion
+MAGENTO_ADMIN_KACHKIN_RODION_LASTNAME=kyleRQWS
+
+MAGENTO_ADMIN_VOLMAN_MARIA_IDENTITY=volman:maria
+MAGENTO_ADMIN_VOLMAN_MARIA_USER=masha.volman
+MAGENTO_ADMIN_VOLMAN_MARIA_EMAIL=maria.beltsova@gmail.com
+MAGENTO_ADMIN_VOLMAN_MARIA_PASSWORD=Desudesu2
+MAGENTO_ADMIN_VOLMAN_MARIA_FIRSTNAME=Мария
+MAGENTO_ADMIN_VOLMAN_MARIA_LASTNAME=Вольман
