--- a/.qunity/.env
+++ b/.qunity/.env
@@ -1,20 +1,11 @@
 MAGENTO_REPOSITORY=git@github.com:qunity/magento.git
-MAGENTO_REPLACE_DIR=./magento
-MAGENTO_DESTINATION_DIR=./magento
+MAGENTO_PWA_REPOSITORY=git@github.com:qunity/magento-pwa.git
 
 PKG_QUNITY_BASE_IDENTITY=qunity:base
 PKG_QUNITY_BASE_REPOSITORY=git@github.com:qunity/module-base.git
-PKG_QUNITY_BASE_REPLACE_DIR=./packages/qunity/module-base
-PKG_QUNITY_BASE_DESTINATION_DIR=./packages/qunity/module-base
 
 PKG_QUNITY_UPWARD_CONNECTOR_IDENTITY=qunity:upward-connector
 PKG_QUNITY_UPWARD_CONNECTOR_REPOSITORY=git@github.com:qunity/module-upward-connector.git
-PKG_QUNITY_UPWARD_CONNECTOR_REPLACE_DIR=./packages/qunity/module-upward-connector
-PKG_QUNITY_UPWARD_CONNECTOR_DESTINATION_DIR=./packages/qunity/module-upward-connector
-
-PWA_REPOSITORY=git@github.com:qunity/magento-pwa.git
-PWA_REPLACE_DIR=./pwa
-PWA_DESTINATION_DIR=./pwa
 
 MAGENTO_ADMIN_KACHKIN_RODION_IDENTITY=kachkin:rodion
 MAGENTO_ADMIN_KACHKIN_RODION_USER=kyleRQWS
