--- a/.warden/warden-env.yml
+++ b/.warden/warden-env.yml
@@ -1,36 +1,9 @@
 services:
   php-debug:
-    environment:
-      - NODE_ENV=development
-      - UPWARD_JS_UPWARD_PATH=/var/www/pwa/upward.yml
-      - MAGENTO_BACKEND_URL=https://${TRAEFIK_SUBDOMAIN}.${TRAEFIK_DOMAIN}/
-      - DEV_SERVER_HOST=0.0.0.0
-      - DEV_SERVER_PORT=${PWA_DEV_SERVER_PORT}
-      - CUSTOM_HTTPS_KEY=/etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.key.pem
-      - CUSTOM_HTTPS_CERT=/etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.crt.pem
-    ports:
-      - ${TRAEFIK_LISTEN:-127.0.0.1}:${PWA_DEV_SERVER_PORT}:${PWA_DEV_SERVER_PORT}
     volumes:
       - type: bind
         source: ./${WARDEN_PKG_ROOT}
         target: /var/packages
-        bind:
-          create_host_path: true
-      - type: bind
-        source: ./${WARDEN_PWA_ROOT}
-        target: /var/www/pwa
-        bind:
-          create_host_path: true
-      - type: bind
-        source: ${HOME}/.warden/ssl/certs/${TRAEFIK_DOMAIN}.key.pem
-        target: /etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.key.pem
-        read_only: true
-        bind:
-          create_host_path: true
-      - type: bind
-        source: ${HOME}/.warden/ssl/certs/${TRAEFIK_DOMAIN}.crt.pem
-        target: /etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.crt.pem
-        read_only: true
         bind:
           create_host_path: true
   php-fpm:
@@ -38,11 +11,14 @@ services:
       - NODE_ENV=development
       - UPWARD_JS_UPWARD_PATH=/var/www/pwa/upward.yml
       - MAGENTO_BACKEND_URL=https://${TRAEFIK_SUBDOMAIN}.${TRAEFIK_DOMAIN}/
+      - DEV_SERVER_HOST=0.0.0.0
+      - DEV_SERVER_PORT=${PWA_DEV_SERVER_PORT}
       - STAGING_SERVER_HOST=0.0.0.0
       - STAGING_SERVER_PORT=${PWA_STAGING_SERVER_PORT}
       - CUSTOM_HTTPS_KEY=/etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.key.pem
       - CUSTOM_HTTPS_CERT=/etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.crt.pem
     ports:
+      - ${TRAEFIK_LISTEN:-127.0.0.1}:${PWA_DEV_SERVER_PORT}:${PWA_DEV_SERVER_PORT}
       - ${TRAEFIK_LISTEN:-127.0.0.1}:${PWA_STAGING_SERVER_PORT}:${PWA_STAGING_SERVER_PORT}
     volumes:
       - type: bind
@@ -60,10 +36,10 @@ services:
         target: /etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.key.pem
         read_only: true
         bind:
-          create_host_path: true
+          create_host_path: false
       - type: bind
         source: ${HOME}/.warden/ssl/certs/${TRAEFIK_DOMAIN}.crt.pem
         target: /etc/ssl/warden-ssl-certs/${TRAEFIK_DOMAIN}.crt.pem
         read_only: true
         bind:
-          create_host_path: true
+          create_host_path: false
