Change magento-pwa to theme-pwa

--- a/.qunity/.env
+++ b/.qunity/.env
@@ -1,5 +1,5 @@
 MAGENTO_REPOSITORY=git@github.com:qunity/magento.git
-MAGENTO_PWA_REPOSITORY=git@github.com:qunity/magento-pwa.git
+MAGENTO_PWA_REPOSITORY=git@github.com:qunity/theme-pwa.git
 MAGENTO_PKG_QUNITY_BASE_IDENTITY=qunity:base
 MAGENTO_PKG_QUNITY_BASE_REPOSITORY=git@github.com:qunity/module-base.git
 MAGENTO_PKG_QUNITY_UPWARD_CONNECTOR_IDENTITY=qunity:upward-connector
