Add external port of 'opensearch' container

--- a/.warden/warden-env.yml
+++ b/.warden/warden-env.yml
@@ -1,4 +1,7 @@
 services:
+  opensearch:
+    ports:
+      - ${TRAEFIK_LISTEN:-127.0.0.1}:${OPENSEARCH_EXTERNAL_PORT}:9200
   php-fpm:
     environment:
       - NODE_ENV=development
