Add OPENSEARCH_EXTERNAL_PORT environment variable

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ TRAEFIK_SUBDOMAIN=app
 
 PWA_DEV_SERVER_PORT=9258
 PWA_STAGING_SERVER_PORT=9259
+OPENSEARCH_EXTERNAL_PORT=9200
 
 WARDEN_DB=1
 WARDEN_ELASTICSEARCH=0
