Add qunity/module-online-product package to base .env file

--- a/.qunity/.env
+++ b/.qunity/.env
@@ -2,6 +2,8 @@ MAGENTO_REPOSITORY=git@github.com:qunity/magento.git
 MAGENTO_PWA_REPOSITORY=git@github.com:qunity/theme-pwa.git
 MAGENTO_PKG_QUNITY_BASE_IDENTITY=qunity:base
 MAGENTO_PKG_QUNITY_BASE_REPOSITORY=git@github.com:qunity/module-base.git
+MAGENTO_PKG_QUNITY_ONLINE_PRODUCT_IDENTITY=qunity:online-product
+MAGENTO_PKG_QUNITY_ONLINE_PRODUCT_REPOSITORY=git@github.com:qunity/module-online-product.git
 MAGENTO_PKG_QUNITY_UPWARD_CONNECTOR_IDENTITY=qunity:upward-connector
 MAGENTO_PKG_QUNITY_UPWARD_CONNECTOR_REPOSITORY=git@github.com:qunity/module-upward-connector.git
 
