Rename project from 'qunity' to 'sexology'

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-WARDEN_ENV_NAME=qunity
+WARDEN_ENV_NAME=sexology
 WARDEN_ENV_TYPE=magento2
 
 WARDEN_WEB_ROOT=/magento
 WARDEN_PWA_ROOT=/theme-pwa
 
-TRAEFIK_DOMAIN=qunity.test
+TRAEFIK_DOMAIN=sexology.test
 TRAEFIK_SUBDOMAIN=app
 
 PWA_DEV_SERVER_PORT=9258
